feat(auth): implementar filtrado de asignación de permisos por rol
Se añadió validación en el contexto de Spring Security para verificar si
el usuario posee el rol de administrador del sistema. Si el usuario no
es administrador, se restringe la consulta utilizando el nuevo método
findByIdInAndAdminEmpresaTrue, limitando los permisos que puede asignar.